Simplifies index.html

--- a/index.html
+++ b/index.html
@@ -1,162 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-  <title>3D Room</title>
-  <style>
-    body { margin: 0; overflow: hidden; background: #000; touch-action: none; }
-    canvas { display: block; }
-
-    .joystick {
-      position: absolute;
-      width: 100px;
-      height: 100px;
-      border-radius: 50%;
-      background: rgba(255, 255, 255, 0.1);
-      border: 2px solid white;
-    }
-
-    #moveJoy { left: 20px; bottom: 20px; }
-    #lookJoy { right: 20px; bottom: 20px; }
-  </style>
-</head>
-<body>
-  <div id="moveJoy" class="joystick"></div>
-  <div id="lookJoy" class="joystick"></div>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/examples/js/loaders/GLTFLoader.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/examples/js/loaders/TextureLoader.js"></script>
-
-  <script>
-    // Setup
-    const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
-    const renderer = new THREE.WebGLRenderer({antialias: true});
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    document.body.appendChild(renderer.domElement);
-
-    // Light
-    const light = new THREE.HemisphereLight(0xffffff, 0x444444, 1.5);
-    light.position.set(0, 200, 0);
-    scene.add(light);
-
-    // Room
-    const floorSize = 10;
-    const tileSize = 1;
-    const floorGeo = new THREE.PlaneGeometry(tileSize, tileSize);
-    const blackMat = new THREE.MeshBasicMaterial({ color: 0x000000 });
-    const whiteMat = new THREE.MeshBasicMaterial({ color: 0xffffff });
-
-    for (let x = -floorSize / 2; x < floorSize / 2; x++) {
-      for (let z = -floorSize / 2; z < floorSize / 2; z++) {
-        const tile = new THREE.Mesh(floorGeo, (x + z) % 2 === 0 ? blackMat : whiteMat);
-        tile.rotation.x = -Math.PI / 2;
-        tile.position.set(x + 0.5, 0, z + 0.5);
-        scene.add(tile);
-      }
-    }
-
-    // Walls & Ceiling
-    const wallMat = new THREE.MeshBasicMaterial({ color: 0xffffff });
-    const wallGeo = new THREE.PlaneGeometry(floorSize, 3);
-    const ceiling = new THREE.Mesh(new THREE.PlaneGeometry(floorSize, floorSize), wallMat);
-    ceiling.rotation.x = Math.PI / 2;
-    ceiling.position.y = 3;
-    scene.add(ceiling);
-
-    const wallZ1 = new THREE.Mesh(wallGeo, wallMat);
-    wallZ1.position.z = -floorSize/2;
-    wallZ1.position.y = 1.5;
-    scene.add(wallZ1);
-
-    const wallZ2 = new THREE.Mesh(wallGeo, wallMat);
-    wallZ2.rotation.y = Math.PI;
-    wallZ2.position.z = floorSize/2;
-    wallZ2.position.y = 1.5;
-    scene.add(wallZ2);
-
-    const wallX1 = new THREE.Mesh(wallGeo, wallMat);
-    wallX1.rotation.y = Math.PI / 2;
-    wallX1.position.x = -floorSize/2;
-    wallX1.position.y = 1.5;
-    scene.add(wallX1);
-
-    const wallX2 = new THREE.Mesh(wallGeo, wallMat);
-    wallX2.rotation.y = -Math.PI / 2;
-    wallX2.position.x = floorSize/2;
-    wallX2.position.y = 1.5;
-    scene.add(wallX2);
-
-    // Painting
-    const loader = new THREE.TextureLoader();
-    loader.load('https://upload.wikimedia.org/wikipedia/commons/thumb/e/ea/The_Starry_Night.JPG/320px-The_Starry_Night.JPG', texture => {
-      const mat = new THREE.MeshBasicMaterial({ map: texture });
-      const plane = new THREE.Mesh(new THREE.PlaneGeometry(2, 1.5), mat);
-      plane.position.set(0, 1.5, -floorSize/2 + 0.01);
-      scene.add(plane);
-    });
-
-    // Table
-    const tableGeo = new THREE.BoxGeometry(2, 0.1, 1);
-    const tableMat = new THREE.MeshStandardMaterial({ color: 0x8B4513 });
-    const table = new THREE.Mesh(tableGeo, tableMat);
-    table.position.set(0, 0.55, 0);
-    scene.add(table);
-
-    // Bowl of fruit
-    const fruitGeo = new THREE.SphereGeometry(0.1, 16, 16);
-    const fruitColors = [0xff0000, 0xffff00, 0x00ff00, 0xffa500, 0x8a2be2];
-    for (let i = 0; i < 5; i++) {
-      const fruit = new THREE.Mesh(fruitGeo, new THREE.MeshStandardMaterial({ color: fruitColors[i] }));
-      fruit.position.set(0 + Math.cos(i) * 0.3, 0.65, 0 + Math.sin(i) * 0.3);
-      scene.add(fruit);
-    }
-
-    // Joystick logic
-    let move = { x: 0, y: 0 }, look = { x: 0, y: 0 };
-
-    function setupJoystick(div, onMove) {
-      let dragging = false;
-      div.addEventListener("touchstart", e => { dragging = true; e.preventDefault(); }, {passive: false});
-      div.addEventListener("touchend", e => { dragging = false; onMove(0, 0); e.preventDefault(); }, {passive: false});
-      div.addEventListener("touchmove", e => {
-        if (!dragging) return;
-        const rect = div.getBoundingClientRect();
-        const touch = e.touches[0];
-        const x = (touch.clientX - rect.left - rect.width/2) / (rect.width/2);
-        const y = (touch.clientY - rect.top - rect.height/2) / (rect.height/2);
-        onMove(x, y);
-        e.preventDefault();
-      }, {passive: false});
-    }
-
-    setupJoystick(document.getElementById("moveJoy"), (x, y) => move = { x, y });
-    setupJoystick(document.getElementById("lookJoy"), (x, y) => look = { x, y });
-
-    // Camera motion
-    camera.position.set(0, 1.5, 5);
-    let yaw = 0, pitch = 0;
-
-    function animate() {
-      requestAnimationFrame(animate);
-
-      // Look update
-      yaw -= look.x * 0.05;
-      pitch = Math.max(-Math.PI/2, Math.min(Math.PI/2, pitch - look.y * 0.05));
-      camera.rotation.set(pitch, yaw, 0);
-
-      // Move update
-      const speed = 0.05;
-      const forward = new THREE.Vector3(Math.sin(yaw), 0, -Math.cos(yaw));
-      const right = new THREE.Vector3(Math.cos(yaw), 0, Math.sin(yaw));
-      camera.position.add(forward.multiplyScalar(-move.y * speed));
-      camera.position.add(right.multiplyScalar(move.x * speed));
-
-      renderer.render(scene, camera);
-    }
-
-    animate();
-  </script>
-</body>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Test Page</title>
+  </head>
+  <body>
+    <h1>Hello from GitHub Pages</h1>
+    <p>If you can see this, the setup works.</p>
+  </body>
 </html>
