--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Test Page</title>
   </head>
   <body>
-    <h1>Hello from GitHub Pages</h1>
-    <p>If you can see this, the setup works.</p>
+    <h1>Good bye from GitHub Pages</h1>
+    <p>If you can see this, the setup is broken.</p>
   </body>
 </html>
